[project]
name = "y_call"
version = "0.1.0"
description = "Deep Y-haplogroup calls using mapping data to the hg19 reference genome."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Eric García Hoyos", email = "ericgaho7@gmail.com" }
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.10.8",
  "pysam>=0.23.3",
  "biopython>=1.87",
  "liftover>=1.3.3",
  "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/EricGH-018/call_y/tree/master"

[tool.setuptools.package-data]
"y_call" = ["bin/BamTable"]

[project.scripts]
y_call = "y_call.make_call:main"
y_call_download_data = "y_call.download:main"
y_call_filter_mm = "y_call.create_mm:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
